# op

./: .uberenv_config.json  CMakeLists.txt  LICENSE  README.md
cmake/: OpMacros.cmake  SeracMacros.cmake
docs/: ._config.yml  .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/sphinx/: porting.rst.txt
docs/doxygen/html/: annotated.html  classTestOptimizer-members.html  classTestOptimizer.html  classTestOptimizer__coll__graph.map  classTestOptimizer__coll__graph.md5  classes.html  classop_1_1Functional-members.html  classop_1_1Functional.html  classop_1_1Go-members.html  classop_1_1Go.html  classop_1_1NLopt-members.html  classop_1_1NLopt.html  classop_1_1NLopt__coll__graph.map  classop_1_1NLopt__coll__graph.md5  classop_1_1Optimizer-members.html  classop_1_1Optimizer.html  classop_1_1Optimizer__coll__graph.map  classop_1_1Optimizer__coll__graph.md5  classop_1_1Variables_1_1VariableMap-members.html  classop_1_1Variables_1_1VariableMap.html  classop_1_1Vector-members.html  classop_1_1Vector.html  classop_1_1Vector__coll__graph.map  classop_1_1Vector__coll__graph.md5  classop_1_1WaitLoop-members.html  classop_1_1WaitLoop.html  comm__validator_8cpp_source.html  demo_8cpp_source.html  dir_099178f0278b14e393f827a32dbb7202.html  dir_099178f0278b14e393f827a32dbb7202_dep.map  dir_099178f0278b14e393f827a32dbb7202_dep.md5  dir_712b80c06dbf7b5e2eb50df007efd895.html  dir_712b80c06dbf7b5e2eb50df007efd895_dep.map  dir_712b80c06dbf7b5e2eb50df007efd895_dep.md5  dir_a5be7bbed3ff2f129951759fe96bf5d5.html  dir_a5be7bbed3ff2f129951759fe96bf5d5_dep.map  dir_abc585ba1661245d2ff66baf6443ab2d.html  dir_abc585ba1661245d2ff66baf6443ab2d_dep.map  dir_abc585ba1661245d2ff66baf6443ab2d_dep.md5  dir_d094d32de00b692f1f2f497b2b985c40.html  (+97 more)
docs/doxygen/html/search/: all_61.js  all_62.js  all_63.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  classes_63.js  classes_66.js  classes_67.js  classes_6d.js  classes_6e.js  classes_6f.js  classes_72.js  classes_76.js  classes_77.js  enums_73.js  functions_61.js  functions_63.js  functions_64.js  functions_65.js  functions_66.js  functions_67.js  functions_69.js  functions_6c.js  functions_6d.js  functions_6e.js  functions_6f.js  functions_72.js  (+18 more)
docs/doxygen/latex/: annotated.tex  classTestOptimizer.tex  classTestOptimizer__coll__graph.md5  classop_1_1Functional.tex  classop_1_1Go.tex  classop_1_1NLopt.tex  classop_1_1NLopt__coll__graph.md5  classop_1_1Optimizer.tex  classop_1_1Optimizer__coll__graph.md5  classop_1_1Variables_1_1VariableMap.tex  classop_1_1Vector.tex  classop_1_1Vector__coll__graph.md5  classop_1_1WaitLoop.tex  dir_099178f0278b14e393f827a32dbb7202.tex  dir_712b80c06dbf7b5e2eb50df007efd895.tex  dir_a5be7bbed3ff2f129951759fe96bf5d5.tex  dir_a5be7bbed3ff2f129951759fe96bf5d5_dep.md5  dir_abc585ba1661245d2ff66baf6443ab2d.tex  dir_d094d32de00b692f1f2f497b2b985c40.tex  hierarchy.tex  namespaceop.tex  namespaceop_1_1debug.tex  namespaceop_1_1mpi.tex  namespaceop_1_1mpi_1_1detail.tex  namespaceop_1_1utility.tex  namespaceop_1_1utility_1_1parallel.tex  namespaceop_1_1utility_1_1reductions.tex  namespaces.tex  refman.tex  structop_1_1NLoptOptions.tex  structop_1_1detail_1_1FunctionalInfo.tex  structop_1_1detail_1_1FunctionalInfo__coll__graph.md5  structop_1_1mpi_1_1detail_1_1has__data.tex  structop_1_1mpi_1_1detail_1_1has__data_3_01T_00_01std_1_1void__t_3_01decltype_07std_1_1declval_3524e889c05cc305ced759fca9c8b2769.tex  structop_1_1mpi_1_1detail_1_1has__data_3_01T_00_01std_1_1void__t_3_01decltype_07std_1_1declval_3de23e1dcf8c8ab7c2518859b32206103.md5  structop_1_1mpi_1_1detail_1_1has__data__coll__graph.md5  structop_1_1mpi_1_1detail_1_1has__size.tex  structop_1_1mpi_1_1detail_1_1has__size_3_01T_00_01std_1_1void__t_3_01decltype_07std_1_1declval_336d4e0461dc0efc09f20739ab7700530.tex  structop_1_1mpi_1_1detail_1_1has__size_3_01T_00_01std_1_1void__t_3_01decltype_07std_1_1declval_3b207867be39348695172c74d7e29575d.md5  structop_1_1mpi_1_1detail_1_1has__size__coll__graph.md5  (+6 more)
docs/sphinx/: core_abstractions.html  porting.html  quickstart.html  rosenbrock.html
host_configs/: quartz.cmake
src/: CMakeLists.txt  TwoCnsts.cpp  VariableMap.cpp  comm_validator.cpp  demo.cpp  nlopt.cpp  nlopt_op.cpp  nlopt_op.hpp  op-config.cmake  op.cpp  op.hpp  op_config.hpp.in  op_debug.hpp  op_mpi.hpp  op_utility.hpp  op_waitloop.hpp  test_optimizer.cpp
src/docs/: CMakeLists.txt  conf.py  index.rst
src/docs/doxygen/: CMakeLists.txt  Doxyfile.in  mainpage.md
src/docs/sphinx/: core_abstractions.rst  porting.rst  quickstart.rst  rosenbrock.rst
tests/: CMakeLists.txt  TwoCnsts.cpp  VariableMap.cpp  test_serializer.cpp
